# mySharesDefinition

./: README.md  pyproject.toml  setup.py
mysharesdefinition/: myAnalystWatchListDefinitions.py  myCalendarWatchListDefinitions.py  myDerivateWatchListDefinitions.py  myFundamentalsWatchListDefinitions.py  myPerformanceWatchListDefinitions.py  myRankingWatchListDefinitions.py  myReportTopListDefinitions.py  myStaticWatchListDefinitions.py
watchlist_definition_me/: myAnalystWatchListDefinitions.py  myCalendarWatchListDefinitions.py  myDerivateWatchListDefinitions.py  myFundamentalsWatchListDefinitions.py  myPerformanceWatchListDefinitions.py  myRankingWatchListDefinitions.py  myReportTopListDefinitions.py  myStaticWatchListDefinitions.py
