[tool.poetry]
name = "mySharesDefinition"
version = "0.3.0"
description = "A Python package that holds definitions for SQLite tables."
authors = ["oliverrudow <oliver.rudow@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"